--- a/Samples/Desktop/D3D12nBodyGravity/src/D3D12nBodyGravity.vcxproj.filters
+++ b/Samples/Desktop/D3D12nBodyGravity/src/D3D12nBodyGravity.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Win32Application.h">
       <Filter>Header Files\Util</Filter>
     </ClInclude>
+    <ClInclude Include="PixFinder.h">
+      <Filter>Header Files\Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
